# better-tiss-calendar

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  better.py  bettercal.db  bettercal.service  cal_formatter.py  format.py  monitoring.py  package-lock.json  package.json  pyproject.toml  requirements.txt  shorthands.csv  tailwind.config.js  tiss.py
.github/workflows/: CI.yml
app/: __init__.py  format.py  monitoring.py  tiss.py
app/resources/: .gitignore  courses.csv  generate_all.sh  generate_courses.py  generate_lecturetube_availability.py  generate_rooms.py  lecturetube_availability.csv  migrate.sql  requirements.txt  rooms.csv  shorthands.csv
app/static/: home.js  statistics.js  style.css
app/templates/: home.html  nobrowser.html  statistics.html  template.css
resources/: rooms.csv  shorthands.csv
static/: home.js
templates/: home.html  template.css
tests/: calendar_de.ics  calendar_en.ics  conftest.py  test_request.py
tests/__snapshots__/test_request/: test_icalendar_de_success.ical  test_icalendar_en_success.ical  test_icalendar_forgoogle_de_success.ical  test_icalendar_forgoogle_en_success.ical  test_icalendar_noshorthands_de_success.ical  test_icalendar_noshorthands_en_success.ical
