[project]
name = "better-tiss-calendar"
version = "0.0.1"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "icalendar>=6.3.1",
    "requests>=2.32.5",
]
requires-python = ">=3.13"
authors = [{ name = "flofriday" }]
description = "A better TISS calendar"
readme = "README.md"
license = { file = "LICENSE.txt" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
exclude = ["venv", ".venv", "**/resources"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["venv", ".venv", "**/resources"]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
    "pytest>=8.4.2",
    "pyright>=1.1.405",
    "ruff>=0.13.1",
    "ty>=0.0.1a21 ",
]
