[project]
name = "better-tiss-calendar"
version = "0.0.1"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=24.1.1",
    "icalendar>=6.3.2",
    "requests>=2.32.5",
]
requires-python = "==3.14.*"
authors = [{ name = "flofriday" }]
description = "A better TISS calendar"
readme = "README.md"
license = { file = "LICENSE.txt" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
exclude = ["venv", ".venv", "**/resources"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["venv", ".venv", "**/resources"]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
    "pytest>=9.0.2",
    "syrupy>=5.1.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
